--- a/eliminar licor.css
+++ b/eliminar licor.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -16,7 +15,6 @@ h1, h2, h3 {
     flex-direction: column;
     min-height: 100vh;
 }
-
 
 header {
     background-color: #007bff;
@@ -61,10 +59,9 @@ header h1 {
     align-items: center;
 }
 
-.sidebar nav ul li:hover {
+/*.sidebar nav ul li:hover {
     background-color: #007bff;
-}
-
+}*/
 
 .app-container {
     display: flex;
@@ -140,13 +137,26 @@ button.btn-danger:hover {
     background-color: #c82333;
 }
 
-button.btn-secondary {
-    background-color: #6c757d;
+.btn-inicio {
+    margin-left: 0px;
+    background-color: #20c9a6;
     color: #fff;
+    border: none;
+    border-radius: 15px;
+    padding: 0.8rem 1.5rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    cursor: pointer;
+    display: block;
+    width: 85%;
+    text-align: left;
+    margin: -0.5rem 0;
+    text-decoration: none;
 }
 
-button.btn-secondary:hover {
-    background-color: #5a6268;
+.btn-inicio:hover {
+    background-color: #17a88b;
+    color: #fff;
 }
 
 .form-actions {
@@ -154,7 +164,6 @@ button.btn-secondary:hover {
     justify-content: space-between;
     align-items: center;
 }
-
 
 .resultado {
     background-color: #fff;
@@ -165,7 +174,6 @@ button.btn-secondary:hover {
     font-size: 1rem;
     color: #333;
 }
-
 
 .listado-eliminar {
     margin-top: 2rem;
@@ -186,7 +194,6 @@ button.btn-secondary:hover {
     font-style: italic;
     color: #666;
 }
-
 
 @media (max-width: 768px) {
     .app-container {
